# do-you-think-you-are-real

./: .dockerignore  .gitignore  404.html  CNAME  Dockerfile  Procfile  README.md  about.html  check_open.js  closed.css  closed.html  entrypoint.sh  index.html  install.sh  main_server.py  nohup.out  open.css  open.html  package-lock.json  package.json  photo.html  privacy-policy.html  server.js  server_python.py  shit.html  shit.js  sitemap.xml  sitemap2.xml  studio.html  subdomoan.py  terms-conditions.html  test.html  test.js  text.html  text.txt  under_construction.py  wsgi.py
config/apache2/: apache2.conf  sites-shared.conf
css/: index.css  photo.css  shit.css  studio.css  test.css  text.css
game/: game.html
html/day_version/: 404.html  about.html  index.html  spotify.html  studio.html  text.html  text1.txt
html/night_version/: 404.html  fga.html  glitch-execute.js  index.html  test.html  void.html
images/: Pictures - Shortcut.lnk
js/: index.js  shit.js
page_chooser/: app.py  closed.html  open.html  page_chooser.wsgi  pyproject.toml
python/: app.py
sql/: create.sql
static/: about.css  about.html  base.css  check-open.js  check_open.js  closed.css  index.html  open.css  open.html  shit.css  shit.html  studio.css  studio.html
text/: index.txt  index_text.txt  shit.txt
timecheck/: README.md  pyproject.toml  timecheck.wsgi
timecheck/tests/: test_app.py  test_open.py
timecheck/timecheck/: app.py  closed-body.html  open-body.html
you_are_real/: app.py  data.py
you_are_real/private/: open.html
you_are_real/static/: check_open.js  closed.css  (+10 more)
(+24 files in other folders)
